feat(golearningstack): mongo for store system's users working
