# pkg/api/security/controller/learning_security_controller.go
@@ -1,14 +1,12 @@
 package controller
 
 import (
-	"fmt"
 	_ "github.com/AugustoKlaic/golearningstack/docs" // importa os arquivos gerados
 	"github.com/AugustoKlaic/golearningstack/pkg/api/errorvalidation"
 	"github.com/AugustoKlaic/golearningstack/pkg/api/security/request"
 	. "github.com/AugustoKlaic/golearningstack/pkg/domain/error"
 	"github.com/AugustoKlaic/golearningstack/pkg/mapper"
 	. "github.com/AugustoKlaic/golearningstack/pkg/service"
-	"github.com/AugustoKlaic/golearningstack/pkg/utils"
 	"github.com/gin-gonic/gin"
 	"log"
 	"net/http"
@@ -29,7 +27,7 @@ func NewLearningSecurityController(service UserCredentialsServiceInterface) *Lea
 
 // @Summary Login for token generation
 // @Description Generates JWT token based on user credentials
-// @Tags Login
+// @Tags Security
 // @Accept json
 // @Produce json
 // @Param userCredentials	body	request.LoginRequest	true	"Create jwt Token for user"
@@ -43,31 +41,41 @@ func (ctrl *LearningSecurityController) Login(c *gin.Context) {
 	var userCredentials request.LoginRequest
 
 	if err := c.ShouldBindJSON(&userCredentials); err != nil {
-		errorvalidation.HandleError(c, &InvalidCredentialsError{})
+		errorvalidation.HandleError(c, err)
 		return
 	}
 
-	token, err := utils.GenerateToken(userCredentials.UserName)
-
-	if err != nil {
-		errorvalidation.HandleError(c, fmt.Errorf("erro ao gerar token"))
+	if token, err := ctrl.service.GenerateUserToken(mapper.ToUserCredentialsEntity(&userCredentials)); err != nil {
+		errorvalidation.HandleError(c, err)
 		return
+	} else {
+		c.IndentedJSON(http.StatusOK, gin.H{"token": token})
 	}
-
-	c.IndentedJSON(http.StatusOK, gin.H{"token": token})
 }
 
+// @Summary Create a new user
+// @Description Create a new user for the system
+// @Tags Security
+// @Accept json
+// @Produce json
+// @Param userCredentials	body	request.LoginRequest	true	"Create a new user"
+// @Success 201 {interface} mongo.InsertOneResult
+// @Failure 404 {string} message
+// @Failure 400 {string} message
+// @Failure 500 {string} message
+// @Router /security/add-user [post]
 func (ctrl *LearningSecurityController) CreateUser(c *gin.Context) {
 	securityControllerLogger.Printf("Creating new user...")
 	var userCredentials request.LoginRequest
 
 	if err := c.ShouldBindJSON(&userCredentials); err != nil {
-		errorvalidation.HandleError(c, &InvalidCredentialsError{})
+		errorvalidation.HandleError(c, err)
 		return
 	}
 
 	if newUserId, err := ctrl.service.CreateUser(mapper.ToUserCredentialsEntity(&userCredentials)); err != nil {
 		errorvalidation.HandleError(c, err)
+		return
 	} else {
 		c.IndentedJSON(http.StatusCreated, gin.H{"userId": newUserId})
 	}
